...
  advisorMessage: 'Message Advisor',
  advisorSendMessage: 'Send message',
  advisorClosePastChats: 'Close past chats',
  advisorNoPastChats: 'No past chats yet.',
  settings: 'Settings',
  homeTab1Of4: 'Home, tab, 1 of 4',
  activityTab2Of4: 'Activity, tab, 2 of 4',
  exploreTab3Of4: 'Explore, tab, 3 of 4',
  advisorTab4Of4: 'Advisor, tab, 4 of 4',
  accounts: 'Accounts',
  language: 'Language',
  appLanguage: 'App language',
  systemDefault: 'System default',
  english: 'English',
  hebrew: 'Hebrew',
...
